# clippi

./: .gitignore  ACCESSIBILITY_TREE_ANALYSIS.md  CLAUDE.md  PLAN.md  PLAN_CRITIQUE.md  package.json  pnpm-lock.yaml
agent/: .gitignore  README.md  evaluate_bug.py  pyproject.toml  requirements.txt  test_extraction.py  test_rebuild.py
agent/clippi_agent/: __init__.py  agent.py  cli.py  schemas.py
agent/examples/: agent.config.json  tasks.json  tasks.txt
apps/docs/: AUTHORING_GUIDES.md  README.md  package.json
examples/agent-demo/: README.md  agent.config.json
examples/backend-node/: .env.example  package.json
examples/backend-node/src/: index.js
examples/demo-app/: guide.manifest.json  index.html  package.json
